--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,12 +18,6 @@ repos:
     -   id: flake8
         args: [--max-line-length=121]
 
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.8.0
-    hooks:
-    -   id: mypy
-        additional_dependencies: [types-all]
-
 -   repo: https://github.com/ambv/black
     rev: 23.12.1
     hooks:
@@ -34,4 +28,5 @@ repos:
     rev: 5.13.2
     hooks:
       - id: isort
+        args: ["--profile", "black"]
         name: isort (python)
