--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,8 +18,8 @@ jobs:
 
       - name: Install test requirements
         run:
-          pip install -r test-requirements.txt
+          pip install -r reqs/test-requirements.txt
 
       - name: Run tests
         run: |
-          python -m pytest --cov=e_orders tests/
+          python -m pytest --cov=e_orders e_orders/app/tests/
