--- a/reqs/requirements.txt
+++ b/reqs/requirements.txt
@@ -19,6 +19,8 @@ phonenumbers==8.13.27
     # via django-phonenumber-field
 pillow==10.2.0
     # via -r reqs/requirements.in
+psycopg2-binary==2.9.9
+    # via -r reqs/requirements.in
 pytz==2023.3.post1
     # via djangorestframework
 sqlparse==0.4.4
